# FastAPI-application-example

./: .coveragerc  .dockerignore  .env.test  .gitignore  Dockerfile  OAUTH2.md  README.md  TODO.md  boot.sh  compose.test.yml  compose.yml  main.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: 45caad34987d_create_user_model.py  4f732db560c8_added_randm_item_table.py  8e17c8cc8734_updated_user_model.py  aca84bd22911_created_user_model.py  bdc49820fff4_added_new_fields_to_randomitem.py
app/: dependencies.py  main.py  models.py
app/core/: application.py  aws_cognito.py
app/routers/: randoms.py  users.py
app/services/: cognito.py
tests/: conftest.py
tests/functional/: test_randoms.py  test_users.py
tests/unit/: test_aws_cognito_service.py
